--- a/Lessons/02_Introduction.Rmd
+++ b/Lessons/02_Introduction.Rmd
@@ -18,23 +18,40 @@ What makes an effective data visualization? What are the essential components/ch
 
 Come up with a consensus list among your group members. 
 
+Good colors
+-make sure the use of color makes sense
+-as simple and clear as possible
+-labels are ESSENTIAL
+-make sure scales make sense
+-easy to understand for all audiences
+-having a legend also ESSENTIAL
+
+
 Compare your list to other groups' lists. 
+-accessible color palettes 
+-units
+-axis labels
+-legible font sizes
+-legible data point sizes (large or small enough)
+-appropriate graph type
+-interactive (if digital)
+
 
 ## Exploring web resources for visualization
 
 1. Navigate to https://www.data-to-viz.com/.
 2. Think of a dataset that you or someone in your field might want to visualize. What types of variables does this dataset contain? What information might you want to convey with a visualization?
 
-<add notes here>
+<We would like to visualize water quality data, which could be numerical, categorical, or done in a time series.>
 
 3. Scroll to the "Explore" section of the website. Follow the flow chart to find a type of graph that would suit your data. Click for more information and a link to the R Graph Gallery. If there are multiple options for graphing your data, how might you choose between them?
 
-<add notes here> 
+<I would test different ones to see which graph I thought was most appropriate, or ask a friend.> 
 
 4. Discuss and compare your findings with a partner.
 5. Scroll further down to the "Caveats" section of the website and click "See the Collection." Choose five topics to explore (some of these are incomplete so choose another if that is the case). Write some notes about what you learned below. 
 
-<add notes here>
+<boxplots cannot show sample size; spaghetti plots are confusing to read; >
 
 6. Discuss and compare your findings with a partner.
 
@@ -75,10 +92,10 @@ pal_futurama (function; comes in the ggsci package)
 ```{r}
 getwd()
 
-#install.packages(tidyverse)
-#install.packages(dataRetrieval)
-#install.packages(zoo)
-#install.packages(ggrepel)
+#install.packages("tidyverse")
+#install.packages("dataRetrieval")
+#install.packages("zoo")
+#install.packages("ggrepel")
 
 library(tidyverse)
 library(dataRetrieval)
@@ -148,7 +165,15 @@ hint: package ggrepel includes a `geom_label_repel` function
 hint: Google "add legend two geom layers ggplot"
 
 ```{r}  
+EnoDischarge <-
+  EnoDischarge%>%
+  mutate(Discharge2 = Discharge/35.3147)
 
+class(EnoDischarge$Date)
+
+
+
+EnoPlot2 <- 
 
 ```
 
