changes to lesson 3

--- a/Lessons/03_Lakes_Physical.Rmd
+++ b/Lessons/03_Lakes_Physical.Rmd
@@ -255,3 +255,4 @@ Why does mixing occur in the spring and fall? What are the mechanisms that make 
 ## Closing Discussion
 
 What are the main concepts you learned about the physical properties of lakes today? What was the evidence for these concepts in the dataset?
+I learned why and how lakes mix in the spring and fall, and why they stratify in the summer. 
