--- a/Assignments/A02_Roth.tex
+++ b/Assignments/A02_Roth.tex
@@ -265,6 +265,8 @@ The completed exercise is due on 11 September 2019 at 9:00 am.
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\CommentTok{#update.packages(c("knitr", "stringr", "stringi"))}
+
 \NormalTok{NTLdata <-}\StringTok{ }\KeywordTok{read.csv}\NormalTok{(}\StringTok{"./Data/Raw/NTL-LTER_Lake_ChemistryPhysics_Raw.csv"}\NormalTok{)}
 
 \KeywordTok{theme_set}\NormalTok{(}\KeywordTok{theme_classic}\NormalTok{())}
@@ -441,13 +443,22 @@ date}\label{multiple-lakes-single-date}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\KeywordTok{as.numeric}\NormalTok{(JulyData}\OperatorTok{$}\NormalTok{temperature_C)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## numeric(0)
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \NormalTok{TempprofilesJuly<-}\StringTok{ }
 \StringTok{  }\KeywordTok{ggplot}\NormalTok{(JulyData, }\KeywordTok{aes}\NormalTok{(}\DataTypeTok{x =}\NormalTok{ temperature_C, }\DataTypeTok{y =}\NormalTok{ depth, }\DataTypeTok{color =}\NormalTok{ lakename)) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{geom_line}\NormalTok{() }\OperatorTok{+}
+\StringTok{  }\KeywordTok{geom_point}\NormalTok{() }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_y_reverse}\NormalTok{() }\OperatorTok{+}
 \StringTok{  }\KeywordTok{scale_x_continuous}\NormalTok{(}\DataTypeTok{position =} \StringTok{"top"}\NormalTok{) }\OperatorTok{+}
-\StringTok{  }\KeywordTok{scale_color_viridis_d}\NormalTok{(}\DataTypeTok{end =} \FloatTok{0.8}\NormalTok{, }\DataTypeTok{option =} \StringTok{"magma"}\NormalTok{) }\OperatorTok{+}\StringTok{ }
-\StringTok{  }\CommentTok{#0.8 telling viridis not to use yellow}
+\StringTok{  }\KeywordTok{scale_color_viridis_d}\NormalTok{(}\DataTypeTok{end =} \FloatTok{0.8}\NormalTok{) }\OperatorTok{+}\StringTok{ }
 \StringTok{  }\KeywordTok{labs}\NormalTok{(}\DataTypeTok{x =} \KeywordTok{expression}\NormalTok{(}\StringTok{"Temperature "}\NormalTok{(degree}\OperatorTok{*}\NormalTok{C)), }\DataTypeTok{y =} \StringTok{"Depth (m)"}\NormalTok{)}
 \KeywordTok{print}\NormalTok{(TempprofilesJuly)}
 \end{Highlighting}
