--- a/Lessons/10_Lakes_WaterQuality.Rmd
+++ b/Lessons/10_Lakes_WaterQuality.Rmd
@@ -46,20 +46,33 @@ names(LAGOSdata)
 
 In your group, look through the LAGOS-NE database and decide on 5 variables available in the database that may predict N and P concentrations in lakes. Remembering that hypotheses differ from predictions in that they propose a mechanism, make hypotheses about your choices in predictor variables and how they might affect N and P concentrations.
 
-> Variable 1: 
+> Variable 1: lulc 500 buffer 2011 21 pct
 
-> Variable 2: 
+> Variable 2: lulc 500 buffer 2011 23 pct
 
-> Variable 3: 
+> Variable 3: lulc 500 buffer 2011 11 pct
 
-> Variable 4
+> Variable 4: ChlA
 
-> Variable 5: 
+> Variable 5: Secchi
 
 Wrangle LAGOSdata so that you have a new data frame that includes TN, TP, your five variables, and any other columns that would be useful for you (e.g., lake id numbers). Helpful functions may include `join`, `select`, `filter`, and `mutate`. Consider whether you want to use `drop_na` to retain complete cases of individual variables or entire rows.
 
 ```{r}
 # Wrangle data here.
+LAGOSlocus <- LAGOSdata$locus
+LAGOSstate <- LAGOSdata$state
+LAGOSnutrient <- LAGOSdata$epi_nutr
+LAGOSlucl <- LAGOSdata$buffer500m.lulc
+LAGOSchag <- LAGOSdata$hu8.chag
+
+LAGOStotal <- left_join(LAGOSlocus, LAGOSstate, by = "state_zoneid") %>%
+  left_join(LAGOSnutrient, LAGOStotal, by = "lagoslakeid") %>%
+  left_join(LAGOSlucl, LAGOStotal, by = "lagoslakeid") %>%
+  left_join(LAGOSchag, LAGOStotal, by = "hu8_zoneid") %>%
+  select(lagoslakeid, sampledate, chla, tp, tn, secchi, 
+         gnis_name, lake_area_ha, state, state_name,  ,hu8_dep_totaln_2010_mean) %>%
+  drop_na(chla:secchi)
 
 ```
 
